[package]
name = "xenctrl-sys"
version = "0.1.1"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
links = "xenctrl"
repository = "https://github.com/Wenzel/xen-sys"
readme = "README.md"
keywords = ["xen"]
description = "Rust bindings for Xen hypervisor"
license = "GPL-3.0-only"
licence-file = "LICENSE"

[dependencies]

[build-dependencies]
bindgen = "0.49.2"
