[package]
name = "xenctrl-sys"
version = "0.1.1"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
links = "xenctrl"
repository = "https://github.com/Wenzel/xen-sys"
readme = "README.md"
keywords = ["xen", "introspection"]
categories = ["external-ffi-bindings"]
description = "Rust bindings for Xen's xenctrl library"
license = "GPL-3.0-only"

[dependencies]

[build-dependencies]
bindgen = "0.49.2"
